fix display of mid year pant size

--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -45,7 +45,7 @@
 
 <p>
   <strong><%= tr("midyear_pant_size") %>:</strong>
-  <%= Enrollment.code_to_pant_sizes(self)[@enrollment.newyear_pant_size] %>
+  <%= Enrollment.code_to_pant_sizes(self)[@enrollment.midyear_pant_size] %>
 </p>
 
 <p>
