--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div><a href="/"><img src="/crk.png" height="100px"></a></div>
+<div><img src="/crk.png" height="100px"></div>
 <% if @user %>
 <span class="userinfo"><%= tr("role_" + @user.role) %> // </span>
 <% end %>
