--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,5 +1,5 @@
-<%= link_to tr('edit'), edit_community_path(@community) %> |
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('edit'), edit_community_path(@community) %> ::
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('communities'), {controller: :communities, action: :index} %>
 
 <h1><%= tr('community') %></h1>
