--- a/app/views/enrollments/edit.html.erb
+++ b/app/views/enrollments/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('show'), @enrollment %> |
+<%= link_to tr('show'), @enrollment %> ::
 <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 
 <h1><%= tr("enrollment") %></h1>
