--- a/app/views/families/edit.html.erb
+++ b/app/views/families/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('show'), @family %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('show'), @family %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 <h1><%= tr('family') %></h1>
 
 <%= render 'form' %>
