--- a/app/views/guardians/show.html.erb
+++ b/app/views/guardians/show.html.erb
@@ -1,5 +1,5 @@
-<%= link_to tr('edit'), edit_guardian_path(@guardian) %> |
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('edit'), edit_guardian_path(@guardian) %> ::
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('family'), @guardian.family %>
 
 <h1><%= tr('guardian') %></h1>
