--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -1,5 +1,5 @@
-<%= link_to tr('edit'), edit_sponsor_path(@sponsor) %> |
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('edit'), edit_sponsor_path(@sponsor) %> ::
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('sponsors'), {controller: :sponsors, action: :index} %>
 
 <h1><%= tr('sponsor') %></h1>
