--- a/app/views/sponsorships/show.html.erb
+++ b/app/views/sponsorships/show.html.erb
@@ -1,5 +1,5 @@
-<%= link_to tr('edit'), edit_sponsorship_path(@sponsorship) %> |
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('edit'), edit_sponsorship_path(@sponsorship) %> ::
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('sponsor'), @sponsor %>
 
 <h1><%= tr('sponsorship') %></h1>
