--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('show'), @child %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('show'), @child %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 <h1><%= tr("child") %></h1>
 
 <%= render 'form' %>
