--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('show'), @community %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('show'), @community %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 <h1><%= tr("community") %></h1>
 
 <%= render 'form' %>
