--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('new'), new_enrollment_path %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('new'), new_enrollment_path %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 <h1><%= tr("enrollments") %></h1>
 
 <table>
