--- a/app/views/enrollments/new.html.erb
+++ b/app/views/enrollments/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('child'), @enrollment.child %>
 
 <h1><%= tr("new_enrollment") %></h1>
