--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -1,5 +1,5 @@
-<%= link_to tr('edit'), edit_enrollment_path(@enrollment) %> |
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('edit'), edit_enrollment_path(@enrollment) %> ::
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('child'), @enrollment.child %>
 
 <h1><%= tr("enrollment") %></h1>
@@ -59,18 +59,18 @@
 </p>
 
 <p>
-  <strong><%= tr("newyear_attendance_notes") %>:</strong>
-  <%= @enrollment.newyear_attendance_notes %>
-</p>
-
-<p>
   <strong><%= tr("midyear_attendance") %>:</strong>
   <%= Enrollment.code_to_attendance(self)[@enrollment.midyear_attendance] %>
 </p>
 
 <p>
-  <strong><%= tr("midyear_attendance_notes") %>:</strong>
-  <%= @enrollment.midyear_attendance_notes %>
+  <strong><%= tr("newyear_grade") %>:</strong>
+  <%= Enrollment.code_to_grades(self)[@enrollment.newyear_grade] %>
+</p>
+
+<p>
+  <strong><%= tr("midyear_grade") %>:</strong>
+  <%= Enrollment.code_to_grades(self)[@enrollment.midyear_grade] %>
 </p>
 
 <p>
@@ -79,38 +79,13 @@
 </p>
 
 <p>
-  <strong><%= tr("report_notes") %>:</strong>
-  <%= @enrollment.report_notes %>
-</p>
-
-<p>
   <strong><%= tr("work_form") %>:</strong>
   <%= @enrollment.work_form ? tr('bool.true') : tr('bool.false') %>
 </p>
 
 <p>
-  <strong><%= tr("work_form_notes") %>:</strong>
-  <%= @enrollment.work_form_notes %>
-</p>
-
-<p>
   <strong><%= tr("pass") %>:</strong>
   <%= @enrollment.pass ? tr('bool.true') : tr('bool.false')%>
-</p>
-
-<p>
-  <strong><%= tr("pass_notes") %>:</strong>
-  <%= @enrollment.pass_notes %>
-</p>
-
-<p>
-  <strong><%= tr("grades") %>:</strong>
-  <%= Enrollment.code_to_grades(self)[@enrollment.grades] %>
-</p>
-
-<p>
-  <strong><%= tr("grades_notes") %>:</strong>
-  <%= @enrollment.grades_notes %>
 </p>
 
 <p>
@@ -131,4 +106,11 @@
 <p>
   <strong><%= tr("full_photo") %>:</strong>
   <%= @enrollment.full_photo %>
+</p>
+
+<p>
+  <strong><%= tr("notes") %>:</strong><br>
+  <% if @enrollment.notes.present? %>
+  <pre><%= @enrollment.notes %></pre>
+  <% end %>
 </p>
