--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('new'), new_family_path %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('new'), new_family_path %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 
 <h1><%= tr('families') %></h1>
 
