--- a/app/views/family_years/edit.html.erb
+++ b/app/views/family_years/edit.html.erb
@@ -1,5 +1,5 @@
-<%= link_to tr('show'), family_year_path(@family_year) %> |
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('show'), family_year_path(@family_year) %> ::
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('family'), @family_year.family %>
 
 <h1><%= tr('family_year') %></h1>
