--- a/app/views/family_years/new.html.erb
+++ b/app/views/family_years/new.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('home'), {controller: :welcome, action: :index} %> |
+<%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('family'), @family_year.family %>
 
 <h1><%= tr("new_family_year") %></h1>
