--- a/app/views/guardians/edit.html.erb
+++ b/app/views/guardians/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('show'), @guardian %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('show'), @guardian %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 <h1><%= tr("guardian") %></h1>
 
 <%= render 'form' %>
