--- a/app/views/sponsors/edit.html.erb
+++ b/app/views/sponsors/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('show'), @sponsor %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('show'), @sponsor %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 
 <h1><%= tr('sponsor') %></h1>
 
