--- a/app/views/sponsorships/edit.html.erb
+++ b/app/views/sponsorships/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to tr('show'), @sponsorship %> | <%= link_to tr('home'), {controller: :welcome, action: :index} %>
+<%= link_to tr('show'), @sponsorship %> :: <%= link_to tr('home'), {controller: :welcome, action: :index} %>
 
 <h1><%= tr("sponsorship") %></h1>
 
