added daily report

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,6 +13,9 @@
 <div style="margin-top: 5px;"><a href="/sponsors"><%= tr('sponsors') %></a></div>
 <div class="subordinate" style="margin-top: 5px;"><a href="/sponsorships"><%= tr('sponsorships') %></a></div>
 <% end %>
+<% if @user && @user.can_access_reports? %>
+<div style="margin-top: 5px;"><a href="/reports/daily_report">Daily Report</a></div>
+<% end %>
 <div style="margin-top: 5px;"><%= link_to tr('logout'), {controller: :welcome, action: :logout}%></a></div>
 <% else %>
 <div style="margin-top: 5px;"><%= link_to tr('login'), {controller: :welcome, action: :login}%></a></div>
