Fix Change Font for tablet https://github.com/kpatrick/crk2/issues/1

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+   body {
+     font-family: "Century Gothic", Roboto, sans-serif;
+ 	   font-size: 14px;
+   }
+
    div.field {
      margin-top: 15px;
    }
