Fix  Change stripped row color https://github.com/kpatrick/crk2/issues/11

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,7 +40,7 @@
      text-align: left;
    }
    tr:nth-child(even) {
-     background: #EEE;
+     background: #DDD;
    }
    th {
      background: #DDD;
