Add in program counters and visual indicators. Adjusted spacing.
https://github.com/kpatrick/crk2/issues/8
https://github.com/kpatrick/crk2/issues/9

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,6 +42,13 @@
    tr:nth-child(even) {
      background: #DDD;
    }
+   tr.out_of_program td, tr.out_of_program td a {
+     # text-decoration: line-through;
+     color: grey
+   }
+   td.status {
+     text-align: center;
+   }
    th {
      background: #DDD;
    }
