--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -80,13 +80,13 @@
 
   <tbody>
     <% @children.each do |child| %>
-      <tr>
+      <tr <%= child.status != "in_program" ? "class=out_of_program": "" %>>
         <td><%= child.code %></td>
         <td><%= child.family_name1 %> <%= child.family_name2 %></td>
         <td><%= child.given_name1 %> <%= child.given_name2 %></td>
         <td><%= child.preferred_name %></td>
         <td><%= child.dob %></td>
-        <td><%= Child::code_to_status(self)[child.status] %></td>
+        <td class="status"><%= child.status == "in_program" ? "✓": "" %></td>
         <td><%= Child::code_to_gender(self)[child.gender] %></td>
         <td><%= link_to tr('show'), child %></td>
         <td><%= link_to tr('new_enrollment'), {controller: :enrollments, action: :new, child_id: child.id} %></td>
