Fix Width of Notes box https://github.com/kpatrick/crk2/issues/5

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,6 +49,9 @@
    td.status {
      text-align: center;
    }
+   p.notes {
+      white-space: pre-line;
+   }
    th {
      background: #DDD;
    }
