--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -49,7 +49,7 @@
 <p>
   <strong><%=tr('notes')%>:</strong>
   <% if @child.notes.present? %>
-  <pre><%= @child.notes %></pre>
+  <p class="notes"><%= @child.notes %></p>
   <% end %>
 </p>
 
