--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -121,6 +121,6 @@
 <p>
   <strong><%= tr("notes") %>:</strong><br>
   <% if @enrollment.notes.present? %>
-  <pre><%= @enrollment.notes %></pre>
+  <p class="notes"><%= @enrollment.notes %></p>
   <% end %>
 </p>
