--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -19,7 +19,7 @@
 <p>
   <strong><%= tr('notes') %>:</strong>
   <% if @family.notes.present? %>
-  <pre><%= @family.notes %></pre>
+  <p class="notes"><%= @family.notes %></p>
   <% end %>
 </p>
 <br>
