--- a/app/views/family_years/show.html.erb
+++ b/app/views/family_years/show.html.erb
@@ -25,7 +25,7 @@
 <p>
   <strong><%= tr('notes') %>:</strong>
   <% if @family_year.notes.present? %>
-  <pre><%= @family_year.notes %></pre>
+  <p class="notes"><%= @family_year.notes %></p>
   <% end %>
 </p>
 <% end %>
