--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
    body {
      font-family: "Century Gothic", Roboto, sans-serif;
  	   font-size: 14px;
+     margin: 8px;
    }
 
    div.field {
