Fix reopened issue #9 so that it works on AJAX request.
Make enhancement #21 to used included rather than not included.

Requires db migrate.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@
      # text-decoration: line-through;
      color: grey
    }
-   .status, .not_included {
+   .status, .included {
      text-align: center;
      # font-weight: bold;
   }
