--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -63,7 +63,7 @@
   <thead>
     <tr>
       <th><%= tr("school_year") %></th>
-      <th><%= tr("not_included") %></th>
+      <th><%= tr("included") %></th>
       <th colspan="1"></th>
     </tr>
   </thead>
@@ -72,7 +72,7 @@
     <% @enrollments.each do |enrollment| %>
       <tr>
         <td><%= enrollment.school_year %></td>
-        <td class="not_included"><%= enrollment.not_included ?  "✓": "✘" %></td>
+        <td class="included"><%= enrollment.included ?  "✓": "✘" %></td>
         <td><%= link_to tr('show'), enrollment %></td>
       </tr>
     <% end %>
