--- a/app/views/enrollments/_form.html.erb
+++ b/app/views/enrollments/_form.html.erb
@@ -116,7 +116,7 @@
     <%= f.label :letter, tr("letter") %><br><%= f.check_box :letter %>
   </div>
   <div class="field float">
-    <%= f.label :not_included, tr('not_included') %><br><%= f.check_box :not_included %>
+    <%= f.label :included, tr('included') %><br><%= f.check_box :included %>
   </div>
 
   <div style="clear:both;"></div>
