--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -104,8 +104,8 @@
 </p>
 
 <p>
-  <strong><%= tr("not_included") %>:</strong>
-  <%= @enrollment.not_included ? tr('bool.true') : tr('bool.false') %>
+  <strong><%= tr("included") %>:</strong>
+  <%= @enrollment.included ? tr('bool.true') : tr('bool.false') %>
 </p>
 
 <p>
