--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -20,33 +20,38 @@
           fail(function(){alert("<%=tr('errors.accessing_db')%>")}).
           done(function(data){
               $("#modal-status").prop("checked", data.status === "in_program");
-              var not_included = (data.enrollment && data.enrollment["<%=Time.new.year.to_s%>"]) || false;
-              $("#modal-not-included").prop("checked", not_included);
+              var included = (data.enrollment && data.enrollment["<%=Time.new.year.to_s%>"]) || false;
+              $("#modal-included").prop("checked", included);
           }); 
     });
     
     $("body").on("click", "#update_button", function(){
       var modal_status = $("#modal-status").prop('checked')
-      var modal_not_included = $("#modal-not-included").prop('checked');
+      var modal_included = $("#modal-included").prop('checked');
       
       $.ajax("/children/" + childId + "/quick_edit_update", {
         method: "POST",
         contentType: "application/json; charset=utf-8",
         dataType: "json",
-        data: JSON.stringify({'status': (modal_status ? "in_program" : "out_of_program"), 'not_included': modal_not_included})
+        data: JSON.stringify({'status': (modal_status ? "in_program" : "out_of_program"), 'included': modal_included})
       }).fail(function(){alert("<%=tr('record_not_saved')%>")}).
          done(function(){
            $.ajax("/children/" + childId + "/quick_edit_read").
                fail(function(){alert("<%=tr('errors.accessing_db')%>")}).
                done(function(data){
                  var status = (data.status === "in_program") ? "✓": "✘";
-                 var not_included = "";
+                 var included = "";
                  if (data.enrollment) {
                    var school_year = Object.keys(data.enrollment)[0];
-                   not_included = school_year + " " + (data.enrollment[school_year] ? "✓": "✘");
+                   included = school_year + " " + (data.enrollment[school_year] ? "✓": "✘");
+                 }
+                 if (data.status != "in_program") {
+                   $(currentEl).closest("tr").addClass("out_of_program");
+                 } else {
+                   $(currentEl).closest("tr").removeClass("out_of_program");
                  }
                  $(currentEl).closest("tr").find(".status").text(status);
-                 $(currentEl).closest("tr").find(".not_included").text(not_included);
+                 $(currentEl).closest("tr").find(".included").text(included);
                  $.modal.close();
                });
          });
@@ -57,7 +62,7 @@
 <div id="modal" style="display:none;">
   <table>
     <tr><td><%= tr('status')%></td><td><input type="checkbox" id="modal-status"></td></tr>
-    <tr><td><%=tr('not_included') + " " + Time.new.year.to_s%></td><td><input type="checkbox" id="modal-not-included"></td></tr>
+    <tr><td><%=tr('included') + " " + Time.new.year.to_s%></td><td><input type="checkbox" id="modal-included"></td></tr>
   </table>
   <div style="padding-top:10px"></div>
   <button type="button" class="btn" id="update_button">Update</button> 
@@ -134,7 +139,7 @@
       <th><%= tr('given_names') %></th>
       <th><%= tr('date_of_birth') %></th>
       <th><%= tr('status') %></th>
-      <th><%= tr('not_included') %></th>
+      <th><%= tr('included') %></th>
       <th><%= tr('gender') %></th>
       <th></th>
       <th></th>
@@ -153,9 +158,9 @@
         <td><%= child.dob %></td>
         <td class="status"><%= child.status == "in_program" ? "✓": "✘" %></td>
         <% if enrollment %>
-        <td class="not_included"><%= enrollment.school_year %> <%= enrollment.not_included ? "✓": "✘" %></td>
+        <td class="included"><%= enrollment.school_year %> <%= enrollment.included ? "✓": "✘" %></td>
         <% else %>
-        <td class="not_included"></td>
+        <td class="included"></td>
         <% end %>
         <td><%= Child::code_to_gender(self)[child.gender] %></td>
         <td><%= link_to tr('show'), child %></td>
