--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -5,7 +5,7 @@
 <script>
     var childId = null;
     var currentEl = null;
-    
+
     $("body").on("click", ".quick_edit", function(){
         currentEl = this;
         childId = $(currentEl).data("child-id");
@@ -14,7 +14,7 @@
     $("body").on("click", "#cancel_button", function(){
       $.modal.close();
     });
-    
+
     $("body").on($.modal.OPEN, "#modal", function(event, modal){
       $.ajax("/children/" + childId + "/quick_edit_read").
           fail(function(){alert("<%=tr('errors.accessing_db')%>")}).
@@ -22,13 +22,13 @@
               $("#modal-status").prop("checked", data.status === "in_program");
               var included = (data.enrollment && data.enrollment["<%=Time.new.year.to_s%>"]) || false;
               $("#modal-included").prop("checked", included);
-          }); 
+          });
     });
-    
+
     $("body").on("click", "#update_button", function(){
       var modal_status = $("#modal-status").prop('checked')
       var modal_included = $("#modal-included").prop('checked');
-      
+
       $.ajax("/children/" + childId + "/quick_edit_update", {
         method: "POST",
         contentType: "application/json; charset=utf-8",
@@ -55,7 +55,7 @@
                  $.modal.close();
                });
          });
-      
+
     });
 </script>
 
@@ -65,11 +65,11 @@
     <tr><td><%=tr('included') + " " + Time.new.year.to_s%></td><td><input type="checkbox" id="modal-included"></td></tr>
   </table>
   <div style="padding-top:10px"></div>
-  <button type="button" class="btn" id="update_button">Update</button> 
-  <button type="button" class="btn btn-default" id="cancel_button" data-dismiss="modal">Cancel</button>
+  <button type="button" class="btn" id="update_button"><%= tr("update")%></button>
+  <button type="button" class="btn btn-default" id="cancel_button" data-dismiss="modal"><%= tr("cancel")%></button>
 </div>
 
-  
+
 <h1><%= tr('family') %></h1>
 
 <p id="notice"><%= notice %></p>
